@@ -32,6 +32,11 @@ my $Cgroup_mount_point = "/dev/oar_cgroups";
 my $Cpuset;
 my $Log_level;
 my $Cpuset_lock_file = "$ENV{HOME}/cpuset.lock.";
+my $OS_cgroups_path = "/sys/fs/cgroup";  # Where the OS mount by itself the cgroups
+
+# directory where are the links to the cgroup mount points (if directly handled
+# by the OS)
+my $Cgroup_directory_collection_links = "/dev/oar_cgroups_links";
 
 # Retrieve parameters from STDIN in the "Cpuset" structure which looks like: 
 # $Cpuset = {
@@ -99,21 +104,51 @@ if ($ARGV[0] eq "init"){
     if (defined($Cpuset_path_job)){
         if (open(LOCKFILE,"> $Cpuset->{oar_tmp_directory}/job_manager_lock_file")){
             flock(LOCKFILE,LOCK_EX) or exit_myself(17,"flock failed: $!");
-            if (!(-r $Cgroup_mount_point.'/tasks')){
-                if (system('oardodo mkdir -p '.$Cgroup_mount_point.' && oardodo mount -t cgroup -o cpuset,cpu,cpuacct,devices,freezer,net_cls,blkio none '.$Cgroup_mount_point.'; oardodo rm -f /dev/cpuset; oardodo ln -s '.$Cgroup_mount_point.' /dev/cpuset')){
-                    exit_myself(4,"Failed to mount cgroup pseudo filesystem");
+            if (!(-r $Cgroup_directory_collection_links.'/cpuset/tasks')){
+                if (!(-r $OS_cgroups_path.'/cpuset/tasks')){
+                    if (system('oardodo mkdir -p '.$Cgroup_mount_point.' &&
+                                oardodo mount -t cgroup -o cpuset,cpu,cpuacct,devices,freezer,net_cls,blkio none '.$Cgroup_mount_point.'
+                                oardodo rm -f /dev/cpuset
+                                oardodo ln -s '.$Cgroup_mount_point.' /dev/cpuset
+                                oardodo mkdir -p '.$Cgroup_directory_collection_links.' &&
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/cpuset
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/cpu
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/cpuacct
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/devices
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/freezer
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/net_cls
+                                oardodo ln -s '.$Cgroup_mount_point.' '.$Cgroup_directory_collection_links.'/blkio
+                               ')){
+                        exit_myself(4,"Failed to mount cgroup pseudo filesystem");
+                    }
+                }else{
+                    # Cgroups already mounted by the OS
+                    if (system('oardodo rm -f /dev/cpuset
+                                oardodo ln -s '.$OS_cgroups_path.'/cpuset /dev/cpuset &&
+                                oardodo mkdir -p '.$Cgroup_directory_collection_links.' &&
+                                oardodo ln -s '.$OS_cgroups_path.'/cpuset '.$Cgroup_directory_collection_links.'/cpuset &&
+                                oardodo ln -s '.$OS_cgroups_path.'/cpu '.$Cgroup_directory_collection_links.'/cpu &&
+                                oardodo ln -s '.$OS_cgroups_path.'/cpuacct '.$Cgroup_directory_collection_links.'/cpuacct &&
+                                oardodo ln -s '.$OS_cgroups_path.'/devices '.$Cgroup_directory_collection_links.'/devices &&
+                                oardodo ln -s '.$OS_cgroups_path.'/freezer '.$Cgroup_directory_collection_links.'/freezer &&
+                                oardodo ln -s '.$OS_cgroups_path.'/net_cls '.$Cgroup_directory_collection_links.'/net_cls &&
+                                oardodo ln -s '.$OS_cgroups_path.'/blkio '.$Cgroup_directory_collection_links.'/blkio
+                               ')){
+                        exit_myself(4,"Failed to link existing OS cgroup pseudo filesystem");
+                    }
                 }
             }
-            if (!(-d $Cgroup_mount_point.'/'.$Cpuset->{cpuset_path})){
-                if (system( 'oardodo mkdir -p '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.' &&'. 
-                            'oardodo chown -R oar '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.' &&'.
-                            '/bin/echo 0 | cat > '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/notify_on_release && '.
-                            '/bin/echo 0 | cat > '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/cpuset.cpu_exclusive && '.
-                            'cat '.$Cgroup_mount_point.'/cpuset.mems > '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/cpuset.mems &&'.
-                            'cat '.$Cgroup_mount_point.'/cpuset.cpus > '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/cpuset.cpus &&'.
-                            '/bin/echo 1000 | cat > '.$Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/blkio.weight'
-
-                        )){
+            if (!(-d $Cgroup_directory_collection_links.'/cpuset/'.$Cpuset->{cpuset_path})){
+                if (system( 'for d in '.$Cgroup_directory_collection_links.'/*; do
+                               oardodo mkdir -p $d/'.$Cpuset->{cpuset_path}.' || exit 1
+                               oardodo chown -R oar $d/'.$Cpuset->{cpuset_path}.' || exit 2
+                               /bin/echo 0 | cat > $d/'.$Cpuset->{cpuset_path}.'/notify_on_release || exit 3
+                             done
+                             /bin/echo 0 | cat > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset->{cpuset_path}.'/cpuset.cpu_exclusive &&
+                             cat '.$Cgroup_directory_collection_links.'/cpuset/cpuset.mems > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset->{cpuset_path}.'/cpuset.mems &&
+                             cat '.$Cgroup_directory_collection_links.'/cpuset/cpuset.cpus > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset->{cpuset_path}.'/cpuset.cpus &&
+                             /bin/echo 1000 | cat > '.$Cgroup_directory_collection_links.'/blkio/'.$Cpuset->{cpuset_path}.'/blkio.weight
+                            ')){
                     exit_myself(4,"Failed to create cgroup $Cpuset->{cpuset_path}");
                 }
             }
@@ -122,24 +157,31 @@ if ($ARGV[0] eq "init"){
         }else{
             exit_myself(16,"Failed to open or create $Cpuset->{oar_tmp_directory}/job_manager_lock_file");
         }
-#'MEM= ;for c in '."@Cpuset_cpus".';do MEM=$(cat /sys/devices/system/cpu/cpu$c/topology/physical_package_id),$MEM; done; echo $MEM > /dev/cpuset/'.$Cpuset_path_job.'/mems && '.
-#'MEM= ;for c in '."@Cpuset_cpus".';do for n in /sys/devices/system/node/node* ;do if [ -r "$n/cpu$c" ]; then MEM=$(basename $n | sed s/node//g),$MEM; fi; done; done;echo $MEM > /dev/cpuset/'.$Cpuset_path_job.'/mems && '.
-#                    'cat '.$Cgroup_mount_point.'/cpuset.mems > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/cpuset.mems && '.
 
-# Be careful with the physical_package_id. Is it corresponding to the memory banc?
-        if (system( 'oardodo mkdir -p '.$Cgroup_mount_point.'/'.$Cpuset_path_job.' && '.
-                    'oardodo chown -R oar '.$Cgroup_mount_point.'/'.$Cpuset_path_job.' && '.
-                    '/bin/echo 0 | cat > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/notify_on_release && '.
-                    '/bin/echo 0 | cat > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/cpuset.cpu_exclusive && '.
-                    'MEM= ;for c in '."@Cpuset_cpus".';do for n in /sys/devices/system/node/node* ;do if [ -r "$n/cpu$c" ]; then MEM=$(basename $n | sed s/node//g),$MEM; fi; done; done;echo $MEM > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/cpuset.mems && '.
-                    '/bin/echo '.join(",",@Cpuset_cpus).' | cat > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/cpuset.cpus'
-                  )){
+        # Be careful with the physical_package_id. Is it corresponding to the memory banch?
+        if (system( 'for d in '.$Cgroup_directory_collection_links.'/*; do
+                       oardodo mkdir -p $d/'.$Cpuset_path_job.' || exit1
+                       oardodo chown -R oar $d/'.$Cpuset_path_job.' || exit2
+                       /bin/echo 0 | cat > $d/'.$Cpuset_path_job.'/notify_on_release || exit 3
+                     done
+                     /bin/echo 0 | cat > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.'/cpuset.cpu_exclusive &&
+                     MEM=
+                     for c in '."@Cpuset_cpus".'; do
+                       for n in /sys/devices/system/node/node* ; do
+                         if [ -r "$n/cpu$c" ]; then
+                           MEM=$(basename $n | sed s/node//g),$MEM
+                         fi
+                       done
+                     done
+                     echo $MEM > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.'/cpuset.mems &&
+                     /bin/echo '.join(",",@Cpuset_cpus).' | cat > '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.'/cpuset.cpus
+                    ')){
             exit_myself(5,"Failed to create and feed the cpuset $Cpuset_path_job");
         }
 
         # Tag network packets from processes of this job
-        if (system( '/bin/echo '.$Cpuset->{job_id}.' | cat > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/net_cls.classid'
-            )){
+        if (system( '/bin/echo '.$Cpuset->{job_id}.' | cat > '.$Cgroup_directory_collection_links.'/net_cls/'.$Cpuset_path_job.'/net_cls.classid'
+                  )){
             exit_myself(5,"Failed to tag network packets of the cgroup $Cpuset_path_job");
         }
         # Put a share for IO disk corresponding of the ratio between the number
@@ -154,20 +196,21 @@ if ($ARGV[0] eq "init"){
         }
         # Get the whole cpus of the node
         my @node_cpus;
-        if (open(CPUS, "$Cgroup_mount_point/cpuset.cpus")){
+        if (open(CPUS, "$Cgroup_directory_collection_links/cpuset/cpuset.cpus")){
             my $str = <CPUS>;
             chop($str);
             $str =~ s/\-/\.\./g;
             @node_cpus = eval($str);
             close(CPUS);
         }else{
-            exit_myself(5,"Failed to retrieve the cpu list of the node $Cgroup_mount_point/cpuset.cpus");
+            exit_myself(5,"Failed to retrieve the cpu list of the node $Cgroup_directory_collection_links/cpuset/cpuset.cpus");
         }
 # Need to do more tests to validate
-#        my $IO_ratio = sprintf("%.0f",(($#cpu_cgroup_uniq_list + 1) / ($#node_cpus + 1) * 1000)) ;
-#        if (system( '/bin/echo '.$IO_ratio.' | cat > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/blkio.weight')){
-#            exit_myself(5,"Failed to set the blkio.weight to $IO_ratio");
-#        }
+        my $IO_ratio = sprintf("%.0f",(($#cpu_cgroup_uniq_list + 1) / ($#node_cpus + 1) * 1000)) ;
+        $IO_ratio = 1000;
+        if (system( '/bin/echo '.$IO_ratio.' | cat > '.$Cgroup_directory_collection_links.'/blkio/'.$Cpuset_path_job.'/blkio.weight')){
+            exit_myself(5,"Failed to set the blkio.weight to $IO_ratio");
+        }
     }
 
     # Copy ssh key files
@@ -254,12 +297,12 @@ if ($ARGV[0] eq "init"){
 
     # Clean cpuset on this node
     if (defined($Cpuset_path_job)){
-        system('echo THAWED > '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/freezer.state
-                PROCESSES=$(cat '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/tasks)
+        system('echo THAWED > '.$Cgroup_directory_collection_links.'/freezer/'.$Cpuset_path_job.'/freezer.state
+                PROCESSES=$(cat '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.'/tasks)
                 while [ "$PROCESSES" != "" ]
                 do
                     oardodo kill -9 $PROCESSES
-                    PROCESSES=$(cat '.$Cgroup_mount_point.'/'.$Cpuset_path_job.'/tasks)
+                    PROCESSES=$(cat '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.'/tasks)
                 done'
               );
 
@@ -267,7 +310,12 @@ if ($ARGV[0] eq "init"){
         # which would allow race condition for the dirty-user-based clean-up mechanism
         if (open(LOCK,">", $Cpuset_lock_file.$Cpuset->{user})){
             flock(LOCK,LOCK_EX) or die "flock failed: $!\n";
-            if (system('oardodo rmdir '.$Cgroup_mount_point.'/'.$Cpuset_path_job)){
+            if (system('oardodo rmdir '.$Cgroup_directory_collection_links.'/cpuset/'.$Cpuset_path_job.' &&
+                        for d in '.$Cgroup_directory_collection_links.'/*/'.$Cpuset_path_job.'; do
+                          oardodo rmdir $d >& /dev/null
+                        done
+                        exit 0
+                       ')){
                 # Uncomment this line if you want to use several network_address properties
                 # which are the same physical computer (linux kernel)
                 #exit(0);
@@ -276,11 +324,11 @@ if ($ARGV[0] eq "init"){
             if (not defined($Cpuset->{job_uid})){
                 # dirty-user-based cleanup: do cleanup only if that is the last job of the user on that host.
                 my @cpusets = ();
-                if (opendir(DIR, $Cgroup_mount_point.'/'.$Cpuset->{cpuset_path}.'/')) {
+                if (opendir(DIR, $Cgroup_directory_collection_links.'/cpuset/'.$Cpuset->{cpuset_path}.'/')) {
                     @cpusets = grep { /^$Cpuset->{user}_\d+$/ } readdir(DIR);
 		            closedir DIR;
 		        } else {
-		            exit_myself(18,"Can't opendir: $Cgroup_mount_point/$Cpuset->{cpuset_path}");
+		            exit_myself(18,"Can't opendir: $Cgroup_directory_collection_links/cpuset/$Cpuset->{cpuset_path}");
 		        }
 		        if ($#cpusets < 0) {
                     # No other jobs on this node at this time
