@@ -517,7 +517,7 @@ JOB_RESOURCE_MANAGER_PROPERTY_DB_FIELD="cpuset"
 # Name of the perl script that manages cpuset.
 # (default is %%OARCONFDIR%%/job_resource_manager.pl which handles the linux kernel
 # cpuset, job keys, clean processes, ...)
-#JOB_RESOURCE_MANAGER_FILE="%%OARCONFDIR%%/job_resource_manager.pl"
+JOB_RESOURCE_MANAGER_FILE="%%OARCONFDIR%%/job_resource_manager_cgroups.pl"
 
 # Path of the relative directory where the cpusets will be created on each
 # nodes(same value than in /proc/self/cpuset).
