@@ -14,6 +14,8 @@ version 2.5.3:
     security fixes, add of new configuration options, listing of the scheduled
     nodes into jobs, fixed bad reinitialization of the limit parameter... 
     See OAR-DOCUMENTATION-API-USER for more informations.
+  - CGROUP: handle cgroup hierarchy already mounted by the OS like in Fedora 18
+    (by systemd in /sys/fs/cgroup) in job_resource_manager_cgroups.pl
 
 version 2.5.2:
 --------------
